--- a/6step/6step.html
+++ b/6step/6step.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
     <title>step6</title>
 </head>
 <body>
-    
+    <section class="conA">
+        <div class="container">
+          <img src="../6step/img/logo.svg" alt="">
+            <h1>LOGGER</h1>
+            <p>美しく楽しくライフブログ</p>
+            <a href="#">ライブログをはじめる</a>
+        </div>
+    </section>
 </body>
 </html>
