--- a/6step/6step.html
+++ b/6step/6step.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/76f5ced856.js" crossorigin="anonymous"></script>
     <title>step6</title>
 </head>
 <body>
@@ -18,5 +19,67 @@
             <a href="#">ライブログをはじめる</a>
         </div>
     </section>
+
+    <section class="conB">
+      <div class="container">
+        <div class="text">
+          <i class="fa-solid fa-chart-column icon"></i>
+          <h2>ライフログて何？</h2>
+          <p>
+            日常のあれこれを記録していくライフログ。
+            いろいろなものが見えてきます。
+          </p>
+          <a href="#">MORE...<i class="fa-solid fa-chevron-right"></i></a>          
+        </div>
+        <div class="text">
+          <i class="fa-solid fa-chart-column icon"></i>
+          <h2>ライフログて何？</h2>
+          <p>
+            日常のあれこれを記録していくライフログ。
+            いろいろなものが見えてきます。
+          </p>
+          <a href="#">MORE...<i class="fa-solid fa-chevron-right"></i></a>          
+        </div>
+        <div class="text">
+          <i class="fa-solid fa-chart-column icon"></i>
+          <h2>ライフログて何？</h2>
+          <p>
+            日常のあれこれを記録していくライフログ。
+            いろいろなものが見えてきます。
+          </p>
+          <a href="#">MORE...<i class="fa-solid fa-chevron-right"></i></a>          
+        </div>
+      </div>
+    </section>
+
+    <section class="conC">
+      <div class="container">
+        <div class="photo"></div>
+        <div class="text">
+          <h2>面倒な設定やデータの管理は全部おまかせ</h2>
+          <p>
+            ライフログでつまずきがちな面倒な設定やデーター管理の煩わしさはありません。
+            他のログアプリとの連携もワンクリックで完了です。
+          </p>
+          <a href="#">詳しい設定方法を確認する。<i class="fa-solid fa-chevron-right"></i></a>
+        </div>        
+      </div>
+    </section>
+
+    <section class="conD">
+      <div class="container">
+        <div class="photo"></div>
+        <div class="text">
+          <h2>面倒な設定やデータの管理は全部おまかせ</h2>
+          <p>
+            ライフログでつまずきがちな面倒な設定やデーター管理の煩わしさはありません。
+            他のログアプリとの連携もワンクリックで完了です。
+          </p>
+          <a href="#">詳しい設定方法を確認する。<i class="fa-solid fa-chevron-right"></i></a>
+        </div>        
+      </div>
+    </section>
+
+
 </body>
 </html>
