--- a/6step/6step.html
+++ b/6step/6step.html
@@ -11,6 +11,28 @@
     <title>step6</title>
 </head>
 <body>
+  <header>
+    <div class="container">
+      <div class="container-small">
+        <a href="6step.html" class="headA">LOGGER</a>    
+        
+        <button type="button" class="headC">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </div>
+
+      
+      <nav class="headB">
+        <ul>
+          <li><a href="#"></a>トップ</li>
+          <li><a href="#"></a>コンテンツ</li>
+          <li><a href="#"></a>ABOUT</li>
+          <li><a href="#"></a>お問い合わせ</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
     <section class="conA">
         <div class="container">
           <img src="../6step/img/logo.svg" alt="">
@@ -80,6 +102,99 @@
       </div>
     </section>
 
+    <footer>
+      <div class="container">
+        <!-- 代替テキスト非表示 -->
+        <style>
+          .sr-only{
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0,0,0,0);
+            border: 0;
+          }
+        </style>
 
+        <div class="footA">
+          <h2>LOGGER</h2>
+          <p>
+            〒000-0000　東京都中央区杉並 3-3-3-403<br>
+            <a href="http://logger.nett/">http://logger.nett/</a>
+          </p>
+
+          <nav class="footD">
+            <ul>
+              <li><a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a></li>
+
+              <li><a href="#">
+                <i class="fa-brands fa-facebook"></i>
+              </a></li>
+
+              <li><a href="#">
+                <i class="fa-brands fa-google-plus-g"></i>
+              </a></li>
+
+              <li><a href="#">
+                <i class="fa-brands fa-instagram"></i>
+              </a></li>
+
+              <li><a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <nav class="footB">
+          <div>
+            <h3>ABOUT</h3>
+            <ul>
+              <li><a href="#">設立</a></li>
+              <li><a href="#">所持地</a></li>
+              <li><a href="#">地図</a></li>
+              <li><a href="#">スタッフ</a></li>
+            </ul>
+          </div>
+
+          <div>
+            <h3>SUPPORT</h3>
+            <ul>
+              <li><a href="#">設立</a></li>
+              <li><a href="#">所持地</a></li>
+              <li><a href="#">地図</a></li>
+              <li><a href="#">スタッフ</a></li>
+            </ul>
+          </div>
+
+          <div>
+            <h3>CONTENTS</h3>
+            <ul>
+              <li><a href="#">設立</a></li>
+              <li><a href="#">所持地</a></li>
+              <li><a href="#">地図</a></li>
+              <li><a href="#">スタッフ</a></li>
+            </ul>
+          </div>
+        </nav>
+
+        <div class="footC">
+          &copy; LOGGER corp. All rights reserved.
+        </div>
+      </div>
+    </footer>
+
+    <script>
+      const but = document.querySelector('.headC')
+      const target = document.querySelector('.headB')
+
+      but.addEventListener('click',()=>{
+        target.classList.toggle('active')
+      })
+    </script>
 </body>
 </html>
