--- a/6step/6step.html
+++ b/6step/6step.html
@@ -24,10 +24,10 @@
       
       <nav class="headB">
         <ul>
-          <li><a href="#"></a>トップ</li>
-          <li><a href="#"></a>コンテンツ</li>
-          <li><a href="#"></a>ABOUT</li>
-          <li><a href="#"></a>お問い合わせ</li>
+          <li><a href="#">トップ</a></li>
+          <li><a href="#">コンテンツ</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
